# vibe-spec

./: .gitignore  .pre-commit-config.yaml  CLA.md  CLAUDE.md  COMMERCIAL.md  CONSTITUTION.md  Makefile  README.md  pyproject.toml  registry.json
agents/: elicitation-agent.md  gap-agent.md  intake-agent.md  nfr-agent.md  orchestrator.md  requirements-agent.md  risk-agent.md  stakeholder-agent.md  vibe-analyzer.md
docs/: vibe-spec-concept01.md
examples/data-platform-migration/: context.json
examples/expense-automation/: context.json  gap-analysis.md
examples/saas-onboarding/: context.json  requirements.md  vibe-fingerprint.json
skills/functional-analysis/: SKILL.md
skills/gap-analysis/: SKILL.md
skills/req-elicitation/: SKILL.md
skills/vibe-ba/: SKILL.md
src/vibe_spec/: __init__.py
src/vibe_spec/cli/: __init__.py  main.py
src/vibe_spec/output/: __init__.py  artefact.py
src/vibe_spec/schemas/: __init__.py  validate.py
src/vibe_spec/scoring/: __init__.py  invest.py  nfr.py  risk.py  spec_health.py
templates/: hitl-review.md  scorecard.json  spec-output.md
tests/: test_nfr.py  test_output.py  test_risk.py  test_scoring.py  test_validate.py
